# tc_common_new

./: CMakeLists.txt  auto_start.cpp  auto_start.h  base64.cpp  base64.h  base_handler.cpp  base_handler.h  client_id_extractor.h  concurrent_hashmap.cpp  concurrent_hashmap.h  concurrent_queue.h  concurrent_type.h  concurrent_vector.h  const_auto.h  cpu_frequency.cpp  cpu_frequency.h  data.cpp  data.h  defer.h  dump_helper.cpp  dump_helper.h  expected.h  fft_32.cpp  fft_32.h  file.cpp  file.h  file_ext.cpp  file_ext.h  file_util.cpp  file_util.h  folder_util.cpp  folder_util.h  fps_stat.h  frame_common.h  gd_md5.cpp  gd_md5.h  hardware.cpp  hardware.h  http_base_op.cpp  http_base_op.h  (+67 more)
clipboard/: clipboard_echo.cpp  clipboard_echo.h  clipboard_file_builder.cpp  clipboard_file_builder.h  clipboard_platform.cpp  clipboard_platform.h  clipboard_types.h
clipboard/stub/: clipboard_platform_stub.cpp  clipboard_platform_stub.h
clipboard/win/: clipboard_platform_win.cpp  clipboard_platform_win.h
qrcode/: qr_generator.cpp  qr_generator.h
tests/: CMakeLists.txt  test.cpp  test_auto_start.cpp  test_clipboard_echo.cpp  test_clipboard_file_builder.cpp  test_clipboard_platform.cpp  test_cpu.cpp  test_dxgi_mon_detector.cpp  test_file.cpp  test_file_util.cpp  test_folder_util.cpp  test_http.cpp  test_network_adapter.cpp  test_process.cpp  test_process_helper.cpp  test_qr_generator.cpp  test_snowflake_id.cpp  test_string_util.cpp  test_uncovered.cpp  test_win_helper.cpp
uuid_impl/: uuid_impl.hpp
win32/: audio_device_helper.cpp  audio_device_helper.h  d3d11_wrapper.h  d3d_debug_helper.cpp  d3d_debug_helper.h  d3d_render.cc  d3d_render.h  dxgi_mon_detector.cpp  dxgi_mon_detector.h  dynamic_library.cpp  dynamic_library.h  firewall_helper.cpp  firewall_helper.h  process_cmdline.cpp  process_cmdline.h  process_helper.cpp  process_helper.h  win_helper.cpp  win_helper.h
