cmake_minimum_required(VERSION 3.22)
find_package(GTest CONFIG REQUIRED)

function(add_tc_test name source)
    add_executable(${name} ${source})
    target_link_libraries(${name} PRIVATE tc_common_new GTest::gtest GTest::gtest_main)
endfunction()

add_tc_test(test_string_util test_string_util.cpp)
add_tc_test(test_file_util test_file_util.cpp)
add_tc_test(test_folder_util test_folder_util.cpp)
add_tc_test(test_file test_file.cpp)
add_tc_test(test_auto_start test_auto_start.cpp)
add_tc_test(test_win_helper test_win_helper.cpp)
add_tc_test(test_dxgi_mon_detector test_dxgi_mon_detector.cpp)
add_tc_test(test_network_adapter test_network_adapter.cpp)
add_tc_test(test_qr_generator test_qr_generator.cpp)
add_tc_test(test_process test_process.cpp)
add_executable(test_process_helper test_process_helper.cpp)
add_tc_test(test_uncovered test_uncovered.cpp)

add_executable(test_common test.cpp)
target_link_libraries(test_common PRIVATE tc_common_new ${Boost_LIBRARIES} GTest::gtest GTest::gtest_main GTest::gmock GTest::gmock_main)

add_executable(test_http test_http.cpp)
target_link_libraries(test_http PRIVATE tc_common_new ${Boost_LIBRARIES} GTest::gtest GTest::gtest_main GTest::gmock GTest::gmock_main)

add_executable(test_cpu test_cpu.cpp)
target_link_libraries(test_cpu PRIVATE tc_common_new ${Boost_LIBRARIES} GTest::gtest GTest::gtest_main GTest::gmock GTest::gmock_main)
